syntax = "proto3";

// import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

package proto;

option go_package = "github.com/kristinvidi/spotify_curate/proto";

service SpotifyCurate {
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
    rpc UpdateUserData (UpdateUserDataRequest) returns (UpdateUserDataResponse) {}
    rpc CreatePlaylistRecentInGenre (CreatePlaylistRecentInGenreRequest) returns (CreatePlaylistRecentInGenreResponse) {}
    rpc CreatePlaylistRecentInGenreAll (CreatePlaylistRecentInGenreAllRequest) returns (CreatePlaylistRecentInGenreAllResponse) {}
    rpc GetUnmappedArtistsForUser (GetUnmappedArtistsForUserRequest) returns (GetUnmappedArtistsForUserResponse) {}
    rpc CreateGenreToArtistsMappings (CreateGenreToArtistsMappingsRequest) returns (CreateGenreToArtistsMappingsResponse) {}
    rpc CreateLabelsForUser (CreateLabelsForUserRequest) returns (CreateLabelsForUserResponse) {}
    rpc GetArtistTagsForUser (GetArtistTagsForUserRequest) returns (GetArtistTagsForUserResponse) {}
}

message General {
    bool success = 1;
    string failure_details = 2;
}

message AuthenticateUserRequest {}

message AuthenticateUserResponse {
    string user_spotify_id = 1;
    General general = 2;
}

message UpdateUserDataRequest {}

message UpdateUserDataResponse {
    General general = 1;
}

message CreatePlaylistRecentInGenreRequest {
    repeated string genre = 1;
}

message CreatePlaylistRecentInGenreResponse {
    General general = 1;
}

message CreatePlaylistRecentInGenreAllRequest {}

message CreatePlaylistRecentInGenreAllResponse {
    General general = 1;
}

message GetUnmappedArtistsForUserRequest {
    string user_spotify_id = 1;
}

message GetUnmappedArtistsForUserResponse {
    General general = 1;
    repeated Artist artists = 2;
}

message Artist {
    string id = 1;
    string uri = 2;
    string name = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateGenreToArtistsMappingsRequest {
    string user_spotify_id = 1;
    repeated GenreToArtistsMapping genre_to_artists_mappings = 2;
}

message GenreToArtistsMapping {
    string genre = 1;
    repeated string artist_names = 2;
}

message CreateGenreToArtistsMappingsResponse {
    General general = 1;
    repeated GenreToArtistsMapping failed_genre_to_artists_mappings = 2;
}

message CreateLabelsForUserRequest {
    string user_spotify_id = 1;
    repeated string labels = 2;
}

message CreateLabelsForUserResponse {
    General general = 1;
    repeated string failed_labels = 2;
}

message GetArtistTagsForUserRequest {
    string user_spotify_id = 1;
}

message GetArtistTagsForUserResponse {
    General general = 1;
    repeated string tags = 2;
}
